# SIFTMatcher

./: CMakeLists.txt  cl.hpp  sift_matcher.cc  sift_matcher.cl  sift_matcher.h  usage.cc
cmake/: FindOpenCL.cmake
